<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName" translatable="false">Walletudo</string>

    <!-- Common strings -->
    <string name="create">Create</string>
    <string name="download">Download</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="divider">Divider</string>
    <string name="groupIndicator">Group indicator</string>
    <string name="only">only</string>

    <!-- Navigation drawer -->
    <string name="dashboardMenu">Dashboard</string>
    <string name="cashFlowMenu">Cash flow</string>
    <string name="tagMenu">Tags</string>
    <string name="walletMenu">Wallets</string>
    <string name="statisticsMenu">Statistics</string>
    <string name="synchronizationMenu">Synchronization</string>
    <string name="settingsMenu">Settings</string>
    <string name="addProfileMenu">Add profile</string>

    <!-- Dashboard fragment -->
    <string name="dashboardTotalAmountLabel">Total:</string>
    <string name="dashboardChartLabel">Last %d days</string>

    <!-- Tag list fragment -->
    <string name="tagListLabel">Tags</string>

    <!-- Tag details fragment -->
    <string name="tagDetailsLabel">Tag details</string>
    <string name="tagDetailsRelatedTagsChartLabel">Total amount of cash flows containg tags %1$s and…</string>
    <string name="tagNameLabel">Name:</string>
    <string name="tagNameHint">name</string>
    <string name="tagDeleteConfirmation">Do you want to delete this tag?{0, choice, 0#|1#\n\n{0, number} cash flow will have removed this tag.| 1&lt;\n\n{0, number} cash flows will have removed this tag.}</string>
    <string name="tagNameIsRequired">Tag name is required.</string>
    <string name="tagChartLabel">Cash flows with tag</string>

    <!-- Wallet list fragment -->
    <string name="walletListLabel">Wallets</string>

    <!-- Wallet details fragment -->
    <string name="walletDetailsLabel">Wallet details</string>

    <string name="walletNameLabel">Name</string>
    <string name="walletInitialAmountLabel">Initial amount</string>
    <string name="walletCurrentAmountLabel">Current amount</string>
    <string name="walletDeleteConfirmation">Do you want to delete this wallet?{0, choice, 0#|1#\n\nYou will also delete {0, number} cash flow.| 1&lt;\n\nYou will also delete {0, number} cash flows.}</string>
    <string name="walletNameIsRequired">wallet name is required.</string>
    <string name="walletInitialAmountIsNotADigit">Initial amount is not a digit.</string>

    <!-- Cashflow list fragment -->
    <string name="cashFlowListLabel">Cash flows</string>

    <!-- Cashflow details fragment -->
    <string name="cashFlowDetailsLabel">Cash flow details</string>
    <string name="cashFlowWalletLabel">Wallet:</string>
    <string name="cashFlowAmountLabel">Amount:</string>
    <string name="cashFlowAmountHint">amount</string>
    <string name="cashFlowCommentLabel">Comment:</string>
    <string name="cashFlowCommentHint">comment</string>
    <string name="cashFlowTagLabel">Tag:</string>
    <string name="cashFlowDateLabel">Date:</string>
    <string name="cashFlowExtraLabel">Extra:</string>

    <string name="cashFlowTransactionIsCompleted">Transaction is completed.</string>
    <string name="cashFlowDeleteConfirmation">Do you want to delete this cash flow?</string>

    <!-- Create Profile fragment -->
    <string name="profileLabel">Profile</string>
    <string name="profileCreateLocalLabel">Create local profile</string>
    <string name="profileName">Profile name</string>
    <string name="profileDownloadProfileLabel">Download profile from server</string>

    <!-- Statistic list fragment -->
    <string name="statisticListLabel">Statistics</string>

    <!-- Statistic details fragment -->
    <string name="statisticDetailsLabel">Statistic details</string>

    <!-- Synchronization fragment -->
    <string name="synchronizationLabel">Synchronization</string>
    <string name="accountLinkWithGoogle">Link with Google</string>

    <!-- Settings fragment -->
    <string name="settingsLabel">Settings</string>
    <string name="statisticsBalanceLabel">Balance:</string>
    <string name="statisticsProfitLabel">profit</string>
    <string name="statisticsLostLabel">lost</string>
    <string name="statisticCustomPeriodNotAvailable">Not yet available</string>
    <string name="statisticsNoProfit">There is no tag with profit\nin this period.</string>
    <string name="statisticsNoLost">There is no tag with lost\nin this period.</string>
    <string name="statisticsPeriodLabel">Period:</string>

</resources>
